--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,3 @@
 {
-  "extends": "airbnb-base",
-  "rules": {
-    "allow": ["_id"]
-  }
+  "no-underscore-dangle":  ["error", { "allow": ["_id"] }]
 }
